Ticket Delete and DateBaseInicializer fixed